--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -62,7 +62,7 @@ To test on Amazon EC2, configure [~/.aws/credentials](https://docs.aws.amazon.co
 
 There are many specific scenarios available, please have a look in the `molecule/` directory.
 
-Run the [ansible-galaxy[(https://github.com/ansible/galaxy-lint-rules) and [my](https://github.com/robertdebock/ansible-lint-rules) lint rules if you want your change to be merges:
+Run the [ansible-galaxy](https://github.com/ansible/galaxy-lint-rules) and [my](https://github.com/robertdebock/ansible-lint-rules) lint rules if you want your change to be merges:
 ```
 ansible-lint -r /path/to/galaxy-lint-rules/rules .
 ansible-lint -r /path/to/ansible-lint-rules/rules .
