--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -65,9 +65,13 @@ To test on Amazon EC2, configure [~/.aws/credentials](https://docs.aws.amazon.co
 There are many specific scenarios available, please have a look in the `molecule/` directory.
 
 Run the [ansible-galaxy](https://github.com/ansible/galaxy-lint-rules) and [my](https://github.com/robertdebock/ansible-lint-rules) lint rules if you want your change to be merges:
-```
-ansible-lint -r /path/to/galaxy-lint-rules/rules .
-ansible-lint -r /path/to/ansible-lint-rules/rules .
+
+```shell
+git clone https://github.com/ansible/ansible-lint.git /tmp/ansible-lint
+ansible-lint -r /tmp/ansible-lint/lib/ansiblelint/rules .
+
+git clone https://github.com/robertdebock/ansible-lint /tmp/my-ansible-lint
+ansible-lint -r /tmp/my-ansible-lint/rules .
 ```
 
 License
