--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -13,6 +13,8 @@ This example is taken from `molecule/default/playbook.yml`:
 {{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}
 ```
 
+Also see a [full explanation and example](https://robertdebock.nl/how-to-use-these-roles.html) on how to use these roles.
+
 Role Variables
 --------------
 
