--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -10,8 +10,7 @@ Example Playbook
 
 This example is taken from `molecule/default/playbook.yml`:
 ```yaml
-{{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}
-```
+{{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 
 Also see a [full explanation and example](https://robertdebock.nl/how-to-use-these-roles.html) on how to use these roles.
 
@@ -20,8 +19,7 @@ Role Variables
 
 These variables are set in `defaults/main.yml`:
 ```yaml
-{{ variables.content | b64decode }}
-```
+{{ variables.content | b64decode }}```
 
 Requirements
 ------------
