--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -12,6 +12,10 @@ This example is taken from `molecule/default/playbook.yml`:
 ```yaml
 {{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 
+The machine you are running this on, may need to be prepared. Tests have been done on machines prepared by this playbook:
+```yaml
+{{ prepare.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
+
 Also see a [full explanation and example](https://robertdebock.nl/how-to-use-these-roles.html) on how to use these roles.
 
 Role Variables
