--- a/templates/alpine-latest-molecule.yml.j2
+++ b/templates/alpine-latest-molecule.yml.j2
@@ -10,9 +10,13 @@ driver:
 platforms:
   - name: {{ role_name }}-{{ item }}
     image: {{ item | regex_replace('-',':') }}
+    pre_build_image: yes
     command: sh -c "while true ; do sleep 1 ; done"
 provisioner:
   name: ansible
+  playbooks:
+    prepare: ../resources/prepare.yml
+    converge: ../resources/playbook.yml
   lint:
     name: ansible-lint
 scenario:
