--- a/templates/generic-molecule.yml.j2
+++ b/templates/generic-molecule.yml.j2
@@ -10,8 +10,12 @@ driver:
 platforms:
   - name: {{ role_name }}-{{ item }}
     image: {{ item | regex_replace('-',':') }}
+    pre_build_image: yes
 provisioner:
   name: ansible
+  playbooks:
+    prepare: ../resources/prepare.yml
+    converge: ../resources/playbook.yml
   lint:
     name: ansible-lint
 scenario:
