--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -12,7 +12,7 @@ This example is taken from `molecule/resources/playbook.yml`:
 ```yaml
 {{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 
-The machine you are running this on, may need to be prepared. Tests have been done on machines prepared by this playbook:
+The machine you are running this on, may need to be prepared.
 ```yaml
 {{ prepare.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 
@@ -58,7 +58,7 @@ Testing
 
 If you find issues, please register them in [GitHub](https://github.com/robertdebock/ansible-role-{{ role_name }}/issues)
 
-To test this role locally please use [Molecule](https://github.com/metacloud/molecule):
+To test this role locally please use [Molecule](https://github.com/ansible/molecule):
 ```
 pip install molecule
 molecule test
