Preparation not required.

--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -14,7 +14,11 @@ This example is taken from `molecule/default/playbook.yml`:
 
 The machine you are running this on, may need to be prepared. Tests have been done on machines prepared by this playbook:
 ```yaml
+{% if prepare.content is defined %}
 {{ prepare.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
+{% else %}
+No preparation required.
+{% endif %}
 
 Also see a [full explanation and example](https://robertdebock.nl/how-to-use-these-roles.html) on how to use these roles.
 
