Add a way to include exceptions and version.

--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -1,7 +1,7 @@
 {{ role_name }}
 =========
 
-<img src="https://docs.ansible.com/ansible-tower/3.2.4/html_ja/installandreference/_static/images/logo_invert.png" width="10%" height="10%" alt="Ansible logo" align="right"/>{% if logo.stat.exists %}<img src="https://raw.githubusercontent.com/robertdebock/ansible-role-{{ role_name }}/master/meta/logo.png" alt="Project logo" width="40" height="40" align="left"/>{%endif %}
+<img src="https://docs.ansible.com/ansible-tower/3.2.4/html_ja/installandreference/_static/images/logo_invert.png" width="10%" height="10%" alt="Ansible logo" align="right"/>{% if logo.stat.exists %}<img src="https://raw.githubusercontent.com/robertdebock/ansible-role-{{ role_name }}/master/meta/logo.png" alt="Project logo" width="40" height="40" align="left"/>{% endif %}
 
 <a href="https://travis-ci.org/robertdebock/ansible-role-{{ role_name }}"><img src="https://travis-ci.org/robertdebock/ansible-role-{{ role_name }}.svg?branch=master" alt="Build status" align="left"/></a>
 
@@ -58,6 +58,13 @@ Compatibility
 
 {{ compatibility.stdout }}
 
+{% if exceptionmd.content is defined %}{{ exceptionmd.content | b64decode }}
+{% endif %}{% if versionmd.content is defined %}
+Upstream version(s)
+-------------------
+
+{{ versionmd.content | b64decode }}
+{% endif %}
 Testing
 -------
 
