--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -58,8 +58,18 @@ Compatibility
 
 {{ compatibility.stdout }}
 
-{% if exceptionmd.content is defined %}{{ exceptionmd.content | b64decode }}
-{% endif %}{% if versionyml is defined %}
+{% if exceptions is defined %}
+Exceptions
+----------
+
+Some variarations of the build matrix do not work. These are the variations and reasons why the build won't work:
+
+| variation                 | reason                 |
+|---------------------------|------------------------|
+{% for exception in exceptions %}| {{ exception.variation }} | {{ exception.reason }} |
+{% endfor %}
+{% endif %}
+{% if versions is defined %}
 Included version(s)
 -------------------
 
