Finalize the way version and exception are rendered into README.

--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -67,8 +67,8 @@ Some variarations of the build matrix do not work. These are the variations and 
 | variation                 | reason                 |
 |---------------------------|------------------------|
 {% for exception in exceptions %}| {{ exception.variation }} | {{ exception.reason }} |
-{% endfor %}
-{% endif %}
+{% endfor %}{% endif %}
+
 {% if versions is defined %}
 Included version(s)
 -------------------
