--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -44,6 +44,11 @@ The following roles can be installed to ensure all requirements are met, using `
 {{ requirements.content | b64decode }}
 ```
 
+This role uses the following modules:
+```yaml
+{{ modules.stdout }}
+```
+
 Context
 -------
 
