--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -7,6 +7,9 @@
 
 {{ meta.galaxy_info.description }}
 
+<img src="https://img.shields.io/ansible/role/d/{{ galaxy_id.stdout }}"/>
+<img src="https://img.shields.io/ansible/quality/{{ galaxy_id.stdout }}"/>
+
 Example Playbook
 ----------------
 
