--- a/templates/travis.yml.j2
+++ b/templates/travis.yml.j2
@@ -8,8 +8,6 @@ services:
   - docker
 
 env:
-  global:
-    - namespace="robertdebock/"
   matrix:
 {% for platform in meta.galaxy_info.platforms %}
 {% if platform.name == "Alpine" %}
@@ -25,7 +23,7 @@ env:
     - image="docker-debian-systemd"
 {% endif %}
 {% if platform.name == "OpenSUSE" %}
-    - namespace="opensuse/" image="leap"
+    - image="docker-opensuse-systemd"
 {% endif %}
 {% if platform.name == "Ubuntu" %}
     - image="docker-ubuntu-systemd" tag="rolling"
@@ -52,11 +50,21 @@ env:
 
 matrix:
   allow_failures:
+{% for platform in meta.galaxy_info.platforms %}
+{% if platform.name == "Alpine" %}
     - env: image="docker-alpine-openrc" tag="edge"
+{% endif %}
+{% if platform.name =="Debian" %}
     - env: image="docker-debian-systemd" tag="unstable"
+{% endif %}
+{% if platform.name == "Fedora" %}
     - env: image="docker-fedora-systemd" tag="rawhide"
+{% endif %}
+{% if platform.name == "Ubuntu" %}
     - env: image="docker-ubuntu-systemd" tag="rolling"
     - env: image="docker-ubuntu-systemd" tag="devel"
+{% endif %}
+{% endfor %}
 
 cache:
   - pip
