--- a/templates/molecule.yml.j2
+++ b/templates/molecule.yml.j2
@@ -8,8 +8,8 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: "${image:-default}-${TOX_ENVNAME:-default}"
-    image: "robertdebock/${image:-docker-fedora-systemd}:${tag:-latest}"
+  - name: "${namespace:+$namespace-}${image:-fedora}${TOX_ENVNAME:+-$TOX_ENVNAME}"
+    image: "${namespace:+$namespace/}${image:-fedora}${tag:+:$tag}"
     command: sh -c "while true ; do sleep 30 ; done"
     pre_build_image: yes
 provisioner:
