--- a/templates/molecule.yml.j2
+++ b/templates/molecule.yml.j2
@@ -10,7 +10,13 @@ driver:
 platforms:
   - name: "${namespace:-robertdebock-}${image:-fedora}-${TOX_ENVNAME:-default}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
-    command: sh -c "while true ; do sleep 30 ; done"
+    command: /sbin/init
+    tmpfs:
+      - /run
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: yes
     pre_build_image: yes
 provisioner:
   name: ansible
@@ -19,7 +25,7 @@ verifier:
   name: ansible
   lint:
     name: ansible-lint
-    enabled: false
+    enabled: no
 {% endif %}
 scenario:
   name: default
