--- a/templates/molecule.yml.j2
+++ b/templates/molecule.yml.j2
@@ -8,9 +8,8 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: "${namespace:-robertdebock-}${image:-fedora}-${TOX_ENVNAME:-default}"
+  - name: "{{ role_name }}-${image:-fedora}${TOX_ENVNAME}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
-    command: /sbin/init
     tmpfs:
       - /run
       - /tmp
