--- a/templates/molecule.yml.j2
+++ b/templates/molecule.yml.j2
@@ -10,6 +10,7 @@ driver:
 platforms:
   - name: "{{ role_name }}-${image:-fedora}${TOX_ENVNAME}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
+    command: /sbin/init
     tmpfs:
       - /run
       - /tmp
