--- a/templates/tox.ini.j2
+++ b/templates/tox.ini.j2
@@ -14,5 +14,5 @@ commands =
     molecule test
 setenv =
     TOX_ENVNAME={envname}
-    MOLECULE_EPHEMERAL_DIRECTORY=/tmp/{envname}
+    MOLECULE_EPHEMERAL_DIRECTORY={toxinidir}/.tox/{envname}
 passenv = namespace image tag
