--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -10,26 +10,24 @@
 Example Playbook
 ----------------
 
-This example is taken from `molecule/resources/playbook.yml`:
+This example is taken from `molecule/resources/playbook.yml` and is tested on each push, pull request and release.
 ```yaml
 {{ example.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 
-The machine you are running this on, may need to be prepared.
+The machine you are running this on, may need to be prepared, I use this playbook to ensure everything is in place to let the role work.
 ```yaml
 {% if prepare.content is defined %}
 {{ prepare.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}```
 {% else %}
 No preparation required.
 ```
-
-{% if verifyyml is defined %}
-A example use of the role or what you can do after applying the role.
-```yaml
-{{ verifyyml.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}}
-```
-
 {% endif %}
 
+{% if verifyyml.content is defined %}
+After running this role, this playbook runs to verify that everything works, this may be a good example how you can use this role.
+```yaml
+{{ verifyyml.content | b64decode | regex_replace('ansible-role-', 'robertdebock.') }}
+```
 {% endif %}
 
 Also see a [full explanation and example](https://robertdebock.nl/how-to-use-these-roles.html) on how to use these roles.
