--- a/templates/molecule.yml.j2
+++ b/templates/molecule.yml.j2
@@ -8,7 +8,7 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: "{{ role_name }}-${image:-fedora}-${tag:-latest}${TOX_ENVNAME}"
+  - name: "{{ role_name }}-${image:-fedora}-${tag:-latest}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
     command: /sbin/init
     volumes:
